<?xml version="1.0"?>
<package>
  <name>denso_description</name>
  <version>0.0.0</version>
  <description>The denso_description package</description>
  
  <maintainer email="mahsa.parsapour@gmail.com">Mahsa Parsapour</maintainer>

  <license>BSD</license>

  <url type="website">http://http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="mahsa.parsapour@gmail.com">Mahsa Parsapour</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
