<?xml version="1.0"?>
<package>
  <name>denso_description</name>
  <version>0.0.0</version>
  <description>The denso_description package</description>
  
  <maintainer email="mahsa.parsapour@gmail.com">Mahsa Parsapour</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/MahsaP/gazebo_ros_denso/issues</url>
  <url type="repository">https://github.com/MahsaP/gazebo_ros_denso</url>

  <author email="mahsa.parsapour@gmail.com">Mahsa Parsapour</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
